<resources>
    <string name="app_name">Partner Taxi Kierowca</string>

    <!-- Ekran dodawania kursu -->
    <string name="source_prompt">Wybierz źródło</string>
    <string name="payment_prompt">Wybierz rodzaj płatności</string>
    <string name="label_source">Źródło kursu:</string>
    <string name="label_payment">Rodzaj płatności:</string>
    <string name="add_receipt_photo">Dodaj zdjęcie potwierdzenia</string>
    <string name="retake_photo">Zrób zdjęcie ponownie</string>
    <string name="remember_receipt">PAMIĘTAJ O WYSTAWIENIU PARAGONU</string>
    <string name="receipt_photo_prompt_mandatory">Zrób zdjęcie wydruku z terminala płatniczego</string>
    <string name="receipt_photo_prompt_optional">Dodaj zdjęcie potwierdzenia płatności (opcjonalnie)</string>
    <string name="label_saldo">LICZNIK</string>
    <string name="label_without_vouchers">(bez voucherów)</string>
    <string name="label_vouchers_month">Vouchery z (%1$s)</string>
    <string name="label_month_current">bieżący miesiąc</string>
    <string name="label_month_previous">poprzedni miesiąc</string>

    <string-array name="source_array">
        <item>Postój</item>
        <item>Dyspozytornia</item>
        <item>Hotel[20]</item>
    </string-array>

    <string-array name="payment_array">
        <item>Karta</item>
        <item>Gotówka</item>
        <item>Voucher</item>
    </string-array>

    <!-- Aktualizacje aplikacji -->
    <string name="update_no_new_version">Masz już najnowszą wersję aplikacji.</string>
    <string name="update_check_failed">Nie udało się sprawdzić dostępności aktualizacji.</string>
    <string name="update_check_error">Błąd sprawdzania aktualizacji: %1$s</string>
    <string name="update_available_title">Dostępna aktualizacja %1$s</string>
    <string name="update_action_install">Aktualizuj teraz</string>
    <string name="update_action_later">Później</string>
    <string name="update_changelog_title">Lista zmian:</string>
    <string name="update_current_version">Twoja wersja: %1$s</string>
    <string name="update_latest_version">Nowa wersja: %1$s</string>
    <string name="update_mandatory_note">Ta aktualizacja jest wymagana, aby kontynuować korzystanie z aplikacji.</string>
    <string name="update_download_title">Pobieranie aktualizacji</string>
    <string name="update_download_description">Wersja %1$s</string>
    <string name="update_download_started">Rozpoczęto pobieranie aktualizacji…</string>
    <string name="update_download_preparing">Przygotowywanie pobierania…</string>
    <string name="update_download_progress_percent">%1$d%%</string>
    <string name="update_download_progress_details">Pobrano %1$s z %2$s</string>
    <string name="update_action_background">Pobieraj w tle</string>
    <string name="update_download_failed">Pobieranie aktualizacji nie powiodło się.</string>
    <string name="update_permission_title">Zezwól na instalację</string>
    <string name="update_permission_message">Aby zainstalować aktualizację spoza sklepu Google Play, zezwól aplikacji na instalowanie nieznanych aplikacji w ustawieniach.</string>
    <string name="update_permission_action">Przejdź do ustawień</string>
    <string name="update_permission_toast">Po włączeniu zgody wróć do aplikacji i ponownie uruchom aktualizację.</string>
    <string name="update_install_error">Nie udało się uruchomić instalatora aktualizacji.</string>
    <string name="connection_issue_retry">Problem z połączeniem z serwerem. Twoja sesja nadal jest aktywna. Spróbuj ponownie.</string>
    <!-- Zmiana salda -->
    <string name="change_saldo_title">Zmiana salda</string>
    <string name="change_saldo_driver_id_label">Identyfikator kierowcy</string>
    <string name="change_saldo_saldo_hint">Kwota zmiany salda (np. -100 lub 200)</string>
    <string name="change_saldo_voucher_current_hint">Zmiana voucherów (bieżący miesiąc)</string>
    <string name="change_saldo_voucher_previous_hint">Zmiana voucherów (poprzedni miesiąc)</string>
    <string name="change_saldo_reason_hint">Wybierz powód</string>
    <string name="change_saldo_custom_reason_hint">Opisz powód</string>
    <string name="change_saldo_submit">Zapisz</string>
    <string name="change_saldo_cancel">Anuluj</string>
    <string name="change_saldo_error_driver">Podaj identyfikator kierowcy.</string>
    <string name="change_saldo_error_amount_invalid">Wpisz poprawną kwotę.</string>
    <string name="change_saldo_error_amount_required">Podaj kwotę zmiany dla co najmniej jednego pola.</string>
    <string name="change_saldo_error_reason">Wybierz powód zmiany.</string>
    <string name="change_saldo_error_custom_reason">Podaj opis dla powodu "Inny".</string>
    <string name="change_saldo_error_generic">Nie udało się zapisać zmian.</string>
    <string name="change_saldo_error_http">Błąd serwera (HTTP %1$d).</string>
    <string name="change_saldo_success">Saldo zostało zaktualizowane.</string>

    <string name="change_saldo_notification_title">Zmiana salda</string>
    <string name="change_saldo_notification_summary">Administrator dokonał zmiany: %1$s</string>
    <string name="change_saldo_notification_reason">Powód: %1$s</string>
    <string name="change_saldo_notification_initiator">Wykonane przez: %1$s</string>
    <string name="change_saldo_notification_saldo_label">Saldo</string>
    <string name="change_saldo_notification_voucher_current_label">Vouchery (bieżące)</string>
    <string name="change_saldo_notification_voucher_previous_label">Vouchery (poprzednie)</string>

    <string name="change_saldo_reason_settlement">Rozliczenie</string>
    <string name="change_saldo_reason_penalty">Kara</string>
    <string name="change_saldo_reason_bonus">Premia</string>
    <string name="change_saldo_reason_other">Inny</string>

    <string-array name="change_saldo_reasons">
        <item>@string/change_saldo_reason_settlement</item>
        <item>@string/change_saldo_reason_penalty</item>
        <item>@string/change_saldo_reason_bonus</item>
        <item>@string/change_saldo_reason_other</item>
    </string-array>

    <string name="dashboard_change_saldo">Zmień saldo</string>
    <string name="dashboard_reports">ZGŁOSZENIA</string>

    <string name="report_title">Zgłoszenia</string>
    <string name="report_section_service">SERWIS</string>
    <string name="report_section_other">INNE</string>
    <string name="report_description_hint">Opisz zgłoszenie</string>
    <string name="report_take_photo">Dodaj zdjęcie</string>
    <string name="report_photo_status_none">Brak zdjęcia</string>
    <string name="report_photo_status_added">Dodano zdjęcie</string>
    <string name="report_send">Wyślij</string>
    <string name="report_error_description">Podaj opis zgłoszenia.</string>
    <string name="report_error_vehicle_plate">Brak przypisanego pojazdu. Wróć i wybierz pojazd.</string>
    <string name="report_send_success">Zgłoszenie wysłane.</string>
    <string name="report_send_error">Nie udało się wysłać zgłoszenia.</string>
</resources>
